--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+    <input class="range" type='range' min=0 max = 64 value = 20>
+    <p>20 x 20</p>
+</div>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
