added the clear button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input class="range" type='range' min=0 max =64  value = 20>
         <p>20 x 20</p>
     </div>
+    <button class="clearBorder">Clear</button>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
