Added the rainbow and pencil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <input class="range" type='range' min=0 max =64  value = 20>
         <p>20 x 20</p>
     </div>
-    <button class="clearBorder">Clear</button>
+    <button class="clearScreen">Clear</button>
+    <button class="randomRGB">Rainbow</button>
+    <button class="pencil">Pencil</button>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
