added the clear button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button class="clearScreen">Clear</button>
     <button class="randomRGB">Rainbow</button>
     <button class="pencil">Pencil</button>
+    <button class="toggleBorder">Toggle Grid</button>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
